#74: Implementing tabs navigation in book page

--- a/jekyll/app/book.html
+++ b/jekyll/app/book.html
@@ -37,14 +37,20 @@ body_class: node-type-book
     </section>
     <section id="bottom-details">
       <nav id="details-navigation">
-        <ul>
-          <li class="active"><a href="#">Translation</a></li>
-          <li><a href="#">New edition</a></li>
-          <li><a href="#">Volumes</a></li>
-          <li><a href="#">Publisher/Printing press</a></li>
-          <li><a href="#">Editions</a></li>
-          <li class="last"><a href="#">Book Structure</a></li>
-        </ul>
+        <a class="previous disabled" data-direction="previous"></a>
+        <div class="tabs-frame">
+          <ul>
+            <li class="active"><a href="#">Translation</a></li>
+            <li><a href="#">New edition</a></li>
+            <li><a href="#">Volumes</a></li>
+            <li><a href="#">Publisher/Printing press</a></li>
+            <li><a href="#">Editions</a></li>
+            <li><a href="#">Editions</a></li>
+            <li><a href="#">Editions</a></li>
+            <li class="last"><a href="#">Book Structure</a></li>
+          </ul>
+        </div>
+        <a class="next" data-direction="next"></a>
       </nav>
       <section id="groups">
         <div class="fields-group">
